--- a/server/public/viewer.html
+++ b/server/public/viewer.html
@@ -107,7 +107,9 @@
             if (ws) {
                 ws.close();
             }
-            ws = new WebSocket('ws://localhost:3001');
+            const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+            const wsUrl = `${protocol}//${window.location.host}`;
+            ws = new WebSocket(wsUrl);
             ws.onopen = handleWebSocketOpen;
             ws.onclose = handleWebSocketClose;
             ws.onerror = handleWebSocketError;
